@startuml
'https://plantuml.com/class-diagram

class App{
main()
start()
}


class ListController{
itemList: Listview
tempList: ArrayList
list: ObservableList

AddListItem(ActionEvent)
refresh()
prettyString()
removeItem(ActionEvent)
editDescription(ActionEvent)
editDueDate(ActionEvent)
markComplete(ActionEvent)
displayALl(ActionEvent)
displayComplete(ActionEvent)
displayIncomplete(ActionEvent)
saveCurrent(ActionEvent)
loadOne(ActionEvent)
clearList(ActionEvent)

}

class TodoListModel{
    addItem()
    removeItem()
    editItemDescription()
    editItemDueDate()
    markItemComplete()
    displayAllItems()
    displayCompleteItems()
    displayIncompleteItems()
    saveCurrentList()
    loadSingleList()
    clearList()


}


javafx.Application <|-- App
App -- ListController
ListController *--> TodoListModel

@enduml